# nbparchiver

./: README.md  bootstrap.sh  pyproject.toml
nbparchiver/: clone.py  podcast.py
nbparchiver/tpls/: index.tpl
src/: clone.py  podcast.py
src/tpls/: podcast.tpl
