[tool.poetry]
name = "nbparchiver"
version = "0.1.0"
description = "A nakedbiblepodcast archiver"
authors = ["chalupaul <me@chalupaul.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
rss-parser = "^1.2.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
jinja2 = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
